[gd_scene load_steps=8 format=3 uid="uid://xafcxs7kldnt"]

[ext_resource type="Script" path="res://tutorial/tutorial_screen_manager.gd" id="1_b2g3c"]
[ext_resource type="PackedScene" uid="uid://b4ikjacppc76a" path="res://tutorial/tutorial_pointer.tscn" id="2_y7q6w"]
[ext_resource type="PackedScene" uid="uid://ce2fwymx42fgx" path="res://tutorial/tutorial_screen.tscn" id="3_kahl5"]
[ext_resource type="PackedScene" uid="uid://curgmm77p4ql3" path="res://mechbody/cockpit/cockpit_console/virtual/vhud_button_tap.tscn" id="4_by11s"]
[ext_resource type="FontFile" uid="uid://cnyb68a32apyf" path="res://assets/fonts/B612_Mono/B612Mono-Regular.ttf" id="5_3763w"]

[sub_resource type="BoxMesh" id="BoxMesh_glbhi"]
size = Vector3(0.5, 0.7, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3nuu5"]
shading_mode = 0
albedo_color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="TutorialScreenManager" type="Node3D" node_paths=PackedStringArray("screens", "pointer")]
script = ExtResource("1_b2g3c")
screens = [NodePath("screens/TutorialScreen"), NodePath("screens/TutorialScreen1"), NodePath("screens/TutorialScreen2"), NodePath("screens/TutorialScreen3"), NodePath("screens/TutorialScreen4"), NodePath("screens/TutorialScreen5"), NodePath("screens/TutorialScreen6"), NodePath("screens/TutorialScreen7")]
pointer = NodePath("TutorialPointer")

[node name="TutorialPointer" parent="." instance=ExtResource("2_y7q6w")]

[node name="screens" type="Node3D" parent="."]

[node name="TutorialScreen" parent="screens" instance=ExtResource("3_kahl5")]

[node name="Label" parent="screens/TutorialScreen" index="0"]
text = "

(PRESS menu TO RECENTER HEADSET)


HELLO! 
AND WELCOME TO THE

-----------------
VIOLENT BODIES
mecha flight sim
DEMO

A GAME BY:
Daichi Murokami
-----------------




 TOUCH NEXT TO CONTINUE-->"

[node name="TutorialScreen1" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen1" index="0"]
text = "THIS IS A WORK IN
PROGRESS :)

IF YOU LIKE WHAT
YOU SEE, FOLLOW ME ON 
discord
patreon
more!

THANK YOU!"

[node name="TutorialScreen2" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen2" index="0"]
text = "PRESS NEXT TO BEGIN TUTORIAL
"

[node name="TutorialScreen3" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen3" index="0"]
text = "USE THE grip BUTTONS ON
EACH CONTROLLER

TO GRAB AND HOLD
THE ARM CONTROLS

THE CONTROLS WILL SNAP
TO YOUR HANDS
"

[node name="TutorialScreen4" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen4" index="0"]
text = "HOLD 'a' 

OR

TAP 'TOGGLE HEAD LOOK'

TO ENABLE HEAD TRACKING.
IN THIS MODE ROTATION
WILL TRACK TO YOUR GAZE

LEAN TO ROLL
"

[node name="TutorialScreen5" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen5" index="0"]
text = "TAP 'TOGGLE FLIGHT MODE'
TO TOGGLE FLIGHT MODE

WHILE ENABLED, THE VEHICLE
WILL MANEUVER LIKE AN AIRCRAFT
"

[node name="TutorialScreen6" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen6" index="0"]
text = "TAP 'WEP TOGGLE'
ON EITHER ARM

TO SWITCH WEAPONS

PRESS trigger 
WHILE HOLDING THE CONTROL STICKS
TO FIRE
"

[node name="TutorialScreen7" parent="screens" node_paths=PackedStringArray("label", "pointer_target") instance=ExtResource("3_kahl5")]
visible = false
label = NodePath("../TutorialScreen/Label")
pointer_target = NodePath("../TutorialScreen/Label")

[node name="Label" parent="screens/TutorialScreen7" index="0"]
text = "



THIS DEMO INCLUDES MOVEMENT
AND COMBAT WITH SIMPLE ENEMIES


THANK YOU SO MUCH FOR TRYING
VIOLENT BODIES (DEMO)

IF YOU LIKE WHAT YOU SEE
(OR DON'T!)
PLEASE GET IN TOUCH!
I ALWAYS LOVE FEEDBACK!




CLOSE TUTORIAL AND START ->"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.131379, -0.0541157)
mesh = SubResource("BoxMesh_glbhi")
surface_material_override/0 = SubResource("StandardMaterial3D_3nuu5")

[node name="BACKBUTTON" parent="." instance=ExtResource("4_by11s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, -0.132839, 0.00865129)

[node name="Label3D" parent="BACKBUTTON/MeshInstance3D" index="0"]
text = "BACK
"

[node name="Label3D" type="Label3D" parent="BACKBUTTON"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0300626, 0)
pixel_size = 0.0002
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "[TOUCH ME]
"
font = ExtResource("5_3763w")
font_size = 100

[node name="FORBUTTON" parent="." instance=ExtResource("4_by11s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.132839, 0.00865129)

[node name="Label3D" parent="FORBUTTON/MeshInstance3D" index="0"]
text = "NEXT
"

[node name="Label3D" type="Label3D" parent="FORBUTTON"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0300626, 0)
pixel_size = 0.0002
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "[TOUCH ME]
"
font = ExtResource("5_3763w")
font_size = 100

[connection signal="button_clicked" from="BACKBUTTON" to="." method="_on_backbutton_button_clicked"]
[connection signal="button_clicked" from="FORBUTTON" to="." method="_on_forbutton_button_clicked"]

[editable path="screens/TutorialScreen"]
[editable path="screens/TutorialScreen1"]
[editable path="screens/TutorialScreen2"]
[editable path="screens/TutorialScreen3"]
[editable path="screens/TutorialScreen4"]
[editable path="screens/TutorialScreen5"]
[editable path="screens/TutorialScreen6"]
[editable path="screens/TutorialScreen7"]
[editable path="BACKBUTTON"]
[editable path="FORBUTTON"]
